# QT-Data-Visualization-Demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  smallerTestingData.csv
src/: Database.cpp  Database.h  LoadDataThread.cpp  LoadDataThread.h  MainCalculation.cpp  MainCalculation.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Newton.cpp  Newton.h  SelectionForm.cpp  SelectionForm.h  SelectionForm.ui  UsefulInclude.h
